# PicturesControl2

./: .gitignore  CMakeLists.txt  PicturesControl2.pro  README.md  RecordsListShips.txt  TODO_List.txt  cactionsexec.cpp  cactionsexec.h  cdrawfilex.cpp  cdrawfilex.h  cimportfiles.cpp  cimportfiles.h  cinifile.cpp  cinifile.h  clistwidgetplace.cpp  clistwidgetplace.h  clistwidgetproperty.cpp  clistwidgetproperty.h  clistwidgetsubject.cpp  clistwidgetsubject.h  clistwidgettheame.cpp  clistwidgettheame.h  clistwidgettype.h  cloadfiles.cpp  cloadfiles.h  cnavigation.cpp  cnavigation.h  csearch.cpp  csearch.h  file.rc  fmview.cpp  fmview.h  fmview.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  processimporttask.cpp  processimporttask.h  resourcedata.qrc  (+2 more)
ThreadPool/: processimporttask.cpp  processimporttask.h  processingtask.cpp  processingtask.h  processrotateccw90task.cpp  processrotateccw90task.h  processrotatecw90task.cpp  processrotatecw90task.h  processsearchpattern12intersectiontask.cpp  processsearchpattern12intersectiontask.h  processsearchpattern1task.cpp  processsearchpattern1task.h  processsearchpattern2task.cpp  processsearchpattern2task.h  processstorerecordlisttask.cpp  processstorerecordlisttask.h
programm/: Makefile  Makefile.Debug  Makefile.Release  settings.ini
programm/data/: FilesConfigPhotos.ini  FilesConfigShips.ini  FilesConfigShips_.ini  HashTagListPlacesPhotos.txt  HashTagListPlacesShips.txt  HashTagListPropertyesPhotos.txt  HashTagListPropertyesShips.txt  HashTagListSubjectPhotos.txt  (+11 more)
tmp/: Protocol 28082025 ImportTaskProcess.txt
